[package]
name = "substreams-solana-utils"
version = "0.1.4"
edition = "2021"

[lib]
name = "substreams_solana_utils"

[dependencies]
substreams = "^0.6.0"
substreams-solana = "0.14.1"
bs58 = "0.5.1"
regex = "1.11.1"
base64 = "0.22.1"
borsh = { version = "1.5.7", features = ["derive"] }
anyhow = "1.0.98"
